force-app/main/default/objects/Contact/fields/ASYMBL_Time__Employment_Classification__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Employment_Classification__c</fullName>
    <label>Employment Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exempt</fullName>
            </value>
            <value>
                <fullName>Non-Exempt</fullName>
                <default>true</default>
                <label>Non-Exempt</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>