force-app/main/default/objects/Contact/fields/bpats__ATS_Is_Job_Board_Applicant__c.field-meta.xml
<CustomField>
    <fullName>bpats__ATS_Is_Job_Board_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Job Board Applicant</label>
    <type>Checkbox</type>
</CustomField>