force-app/main/default/objects/Contact/fields/bpats__ATS_Job_Board_Application__c.field-meta.xml
<CustomField>
    <fullName>bpats__ATS_Job_Board_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Board Application</label>
    <referenceTo>bpats__Job_Board_Application__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>