force-app/main/default/objects/Contact/fields/bpats__Contact_Relationship__c.field-meta.xml
<CustomField>
    <fullName>bpats__Contact_Relationship__c</fullName>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>bpats__Contact_Relationship</valueSetName>
    </valueSet>
</CustomField>