force-app/main/default/objects/Contact/fields/bpats__Current_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>bpats__Current_Pay_Rate__c</fullName>
    <label>Current Pay Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>