force-app/main/default/objects/Contact/fields/bpats__Current_Salary__c.field-meta.xml
<CustomField>
    <fullName>bpats__Current_Salary__c</fullName>
    <label>Current Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>