force-app/main/default/objects/Contact/fields/bpats__Desired_Salary__c.field-meta.xml
<CustomField>
    <fullName>bpats__Desired_Salary__c</fullName>
    <label>Desired Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>