force-app/main/default/objects/Contact/fields/bpats__Earliest_Available_Date__c.field-meta.xml
<CustomField>
    <fullName>bpats__Earliest_Available_Date__c</fullName>
    <label>Earliest Available Date</label>
    <type>Date</type>
</CustomField>