force-app/main/default/objects/Contact/fields/bpats__Is_Resume_Parsed__c.field-meta.xml
<CustomField>
    <fullName>bpats__Is_Resume_Parsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Resume Parsed</label>
    <type>Checkbox</type>
</CustomField>