force-app/main/default/objects/Contact/fields/bpats__Parsing_Error__c.field-meta.xml
<CustomField>
    <fullName>bpats__Parsing_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parsing Error</label>
    <type>Checkbox</type>
</CustomField>