force-app/main/default/objects/Contact/fields/bpats__Sync_This_Record__c.field-meta.xml
<CustomField>
    <fullName>bpats__Sync_This_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync This Record</label>
    <type>Checkbox</type>
</CustomField>