force-app/main/default/objects/Contact/recordTypes/Partner.recordType-meta.xml
<RecordType>
    <fullName>Partner</fullName>
    <active>true</active>
    <description>Contacts related to partner organizations</description>
    <label>Partner</label>
</RecordType>